estilos del footer y terminado la estructura central

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./estilos-nav.css">
     <link rel="stylesheet" href="./estilos-main.css">
+    <link rel="stylesheet" href="./estilo-footer.css">
     <title>Desafio</title>
 </head>
 <body>
@@ -22,14 +23,16 @@
             </ul>
         </nav>
     </header>
-    <aside class="container-cards">
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-    </aside>
-    <main class="contenido-main">
-        <h1 class="contenido-main-titulo">WELCOME TO WONDERLAND</h1>
+    <main class="contenido-central">
+        <aside class="container-cards">
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+        </aside>
+        <div class="contenido-central-main">
+            <h1 class="contenido-main-titulo">WELCOME TO WONDERLAND</h1>
+        </div>
     </main>
     <footer class="footer">
         <address>Creado con cariño por @IsaCrist </address>
