hovever del clickme y añadido logo

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="header-nav">
             <figure class="nav-container-logo">
-                <img src="./imagenes/pngwing.com.png" alt="logo">
+                <img src="./imagenes/Alice_in_Wonderland.svg" alt="logo">
             </figure>
             <ul class="nav-list">
                 <li><a href="">About as</a></li>
