añadida la aleatorieda de imagenes y separacion entre main y el contenido main

--- a/src/index.html
+++ b/src/index.html
@@ -24,35 +24,37 @@
         </nav>
     </header>
     <main class="contenido-central">
-        <aside class="container-cards">
-            <div class="card">
-                <iframe  src="https://www.youtube.com/embed/Q8Q3RiBiNOI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="contenido-central-visual">
+            <aside class="container-cards">
+                <div class="card cad1">
+                    <iframe  src="https://www.youtube.com/embed/Q8Q3RiBiNOI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="card card2">
+                    <iframe src="https://www.youtube.com/embed/YhlEY7doQEA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="card card3">
+                    <iframe src="https://www.youtube.com/embed/9POCgSRVvf0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="card card3">
+                    <iframe src="https://www.youtube.com/embed/x3IWwnNe5mc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </aside>
+            <div class="contenido-central-main">
+                <h1 class="contenido-main-titulo">WELCOME TO WONDERLAND!</h1>
+                <figure class="contenido-main-imagen">
+                    <img src="./imagenes/alicia.png" alt="imagen-alicia">
+                </figure>
+                <p>Is your boredom enough to follow a rabbit and jump down its hole?<br>
+                    For Alicia apparently yes, she travels to a strange, grotesque and  <br>
+                    frightening world,  where she has to keep a cool head to unmask the <br>
+                    absurdity of the situations she experiences.</p>
             </div>
-            <div class="card">
-                <iframe src="https://www.youtube.com/embed/YhlEY7doQEA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="card">
-                <iframe src="https://www.youtube.com/embed/9POCgSRVvf0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="card">
-                <iframe src="https://www.youtube.com/embed/x3IWwnNe5mc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-        </aside>
-        <div class="contenido-central-main">
-            <h1 class="contenido-main-titulo">WELCOME TO WONDERLAND!</h1>
-            <figure class="contenido-main-imagen">
-                <img src="./imagenes/alicia.png" alt="imagen-alicia">
-            </figure>
-            <p>Is your boredom enough to follow a rabbit and jump down its hole?<br>
-                For Alicia apparently yes, she travels to a strange, grotesque and  <br>
-                frightening world,  where she has to keep a cool head to unmask the <br>
-                absurdity of the situations she experiences.</p>
         </div>
-        <button class="contenido-central-button">CLICK ME!</button>
+        <button type="button" class="contenido-central-button" onclick="onClickMe()" >CLICK ME!</button>
     </main>
     <footer class="footer">
         <address>Creado con cariño por @CristiGB </address>
     </footer>
-    
+    <script src="./animated.js"></script>
 </body>
 </html>
