--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,21 @@
 <body>
     <header>
         <nav class="header-nav">
-            <figure class="nav-container-logo">
-                <img src="./imagenes/Alice_in_Wonderland.svg" alt="logo">
-            </figure>
+            <div class="header-nav-left">
+                <figure class="nav-container-logo">
+                    <img src="./images/Alice_in_Wonderland.svg" alt="logo">
+                </figure>
+                <figure class="nav-container-song">
+                    <img src="./images/sonido.png" class="img_music play" onclick="onClickPause_Play()" 
+                        alt="icono del sonido">
+                    <audio class="audio_alice_principal" src="./audio/alices_theme.mp3" >
+                </figure>
+            </div>
             <ul class="nav-list">
-                <li><a href="">About as</a></li>
-                <li><a href="">Madriguera</a</li>
-                <li><a href="">Contact</a></li>
-                <li><a href="">Comunity</a></li>
+                <li><a href="https://aliceinwonderland.fandom.com/es/wiki/Alicia">About as</a></li>
+                <li><a href="https://aliceinwonderland.fandom.com/es/wiki/La_Madriguera_del_Conejo_Blanco">Madriguera</a</li>
+                <li><a href="https://www.ucm.es/data/cont/docs/119-2014-02-19-Carroll.AliciaEnElPaisDeLasMaravillas.pdf">Libro</a></li>
+                <li><a href="https://www.facebook.com/aliceinwonderlandofficialbook/community/?ref=page_internal&mt_nav=0&_rdr">Comunity</a></li>
             </ul>
         </nav>
     </header>
@@ -42,19 +49,25 @@
             <div class="contenido-central-main">
                 <h1 class="contenido-main-titulo">WELCOME TO WONDERLAND!</h1>
                 <figure class="contenido-main-imagen">
-                    <img src="./imagenes/alicia.png" alt="imagen-alicia">
+                    <img src="./images/alicia.png" alt="imagen-alicia">
                 </figure>
                 <p>Is your boredom enough to follow a rabbit and jump down its hole?<br>
                     For Alicia apparently yes, she travels to a strange, grotesque and  <br>
                     frightening world,  where she has to keep a cool head to unmask the <br>
                     absurdity of the situations she experiences.</p>
+                
             </div>
+        </div>
+        <div class="credits">
+            <LEWIS>ALICIA IN THE WONDERLAND <br>-LEWIS CARROLL</p>
         </div>
         <button type="button" class="contenido-central-button" onclick="onClickMe()" >CLICK ME!</button>
     </main>
     <footer class="footer">
-        <address>Creado con cariño por @CristiGB </address>
+        <address>Creado con cariño por <figure><img src="./images/github.png" href="https://github.com/CristiGB"></figure> 
+            <a href="https://github.com/CristiGB"> CristiGB </a> </address>
     </footer>
-    <script src="./animated.js"></script>
+    <script src="./animated_clickme.js"></script>
+    <script src="./controls_audio.js"></script>
 </body>
 </html>
