--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../src/styles/estilos_global.css">
-   <link rel="stylesheet" href="../src/styles//estilos-nav.css">
-   <link rel="stylesheet" href="../src/styles//estilos-main.css">
-    <link rel="stylesheet" href="../src/styles//estilo-footer.css">
+    <link rel="stylesheet" href="./src/styles/estilos_global.css">
+   <link rel="stylesheet" href="./src/styles//estilos-nav.css">
+   <link rel="stylesheet" href="./src/styles//estilos-main.css">
+    <link rel="stylesheet" href="./src/styles//estilo-footer.css">
     <title>Desafio</title>
 </head>
 <body>
