2 secciones arregladas y añadidas fechas, cambiado el fondo del body y colocado fixed

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/styles/estilos_global.css">
     <link rel="stylesheet" href="./src/styles/estilos-nav.css">
-    <!--<link rel="stylesheet" href="./src/styles/estilos-main.css">
-    <link rel="stylesheet" href="./src/styles/estilo-footer.css"> -->
+    <link rel="stylesheet" href="./src/styles/estilos-main.css">
+    <!--<link rel="stylesheet" href="./src/styles/estilo-footer.css"> -->
     <title>Desafio</title>
 </head>
 <body>
@@ -37,6 +37,45 @@
             </div> 
         </nav>
     </header>
+
+    <main class="contenido-central">
+        <aside class="contenido-central-main">
+            
+            <figure class="contenido-main--imagen">
+                <img src="./src/assets/images/imgs/alicia.png" alt="imagen-alicia">
+            </figure>
+            <h1 class="contenido-main--titulo">¡WELCOME!</h1>
+            <p>Is your boredom enough to follow a rabbit and jump down its hole?<br>
+                For Alicia apparently yes, she travels to a strange, grotesque and  <br>
+                frightening world,  where she has to keep a cool head to unmask the <br>
+                absurdity of the situations she experiences.
+            </p>
+            <div class="container_credits">
+                <div class="credits">
+                    <LEWIS>ALICIA IN THE WONDERLAND <br>-LEWIS CARROLL</p>
+                </div>
+            </div>
+        </aside>
+        <aside class="container-cards">
+            <h2>WATCH ME</h2>
+            
+            <div class="card cad1">
+                <iframe  src="https://www.youtube.com/embed/Q8Q3RiBiNOI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="cards--flecha cards--flecha__left"></div>
+            <div class="card card2">
+                <iframe src="https://www.youtube.com/embed/YhlEY7doQEA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="cards--flecha cards--flecha__right"></div>
+            <div class="card card3">
+                <iframe src="https://www.youtube.com/embed/9POCgSRVvf0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="cards--flecha cards--flecha__left-down"></div>
+            <div class="card card3">
+                <iframe src="https://www.youtube.com/embed/x3IWwnNe5mc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </aside>
+    </main>
    
 </body>
 </html>
