detalles de responsive realizados, solo quedan detalles del fondo del body

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./src/styles/estilos-nav.css">
     <link rel="stylesheet" href="./src/styles/estilos-main.css">
     <link rel="stylesheet" href="./src/styles/estilo-flotans_footer.css">
+    <link rel="stylesheet" href="./src/styles/other-media/tablet.css" media="(min-width: 598px)">
+    <link rel="stylesheet" href="./src/styles/other-media/destok.css" media="(min-width: 1020px)">
     <title>Desafio</title>
 </head>
 <body>
@@ -18,7 +20,7 @@
                 
                 <div class="nav-container-icon--blanco nav-container-icon nav-container-icon__song play" 
                   onclick="onClickPause_Play()">
-                    <audio class="audio_alice_principal" src="./src/assets/audio/alices_theme.mp3" >
+                    <audio class="audio_alice_principal" src="./src/assets/audio/alices_theme.mp3" autoplay>
                 </div>
                 <div class="nav-container-icon--blanco nav-container-icon nav-container-icon__logo"></div>
                 
@@ -46,7 +48,7 @@
                 <img src="./src/assets/images/imgs/alicia-mini.png" alt="imagen-alicia">
             </figure>
             <h1 class="contenido-main--titulo">¡WELCOME!</h1>
-            <p>Is your boredom enough to follow a rabbit and jump down its hole?<br>
+            <p>Is your boredom enough to follow a rabbit and jump down its hole?<br><br>
                 For Alicia apparently yes, she travels to a strange, grotesque and  <br>
                 frightening world,  where she has to keep a cool head to unmask the <br>
                 absurdity of the situations she experiences.
